由于Direction和ngui的类冲突，重命名为BlockDirection

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,9 @@ $RECYCLE.BIN/
 *.lnk
 .settings/settings.json
 *.suo
+/Assets/UnityVS.meta
+/Assets/UnityVS
+/*.csproj
+/*.sln
+/*.suo
+/VoxelSaves
